--- a/HotelSimulatie/HotelSimulatie/HotelSimulatie.csproj
+++ b/HotelSimulatie/HotelSimulatie/HotelSimulatie.csproj
@@ -51,9 +51,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\Cinema.cs" />
+    <Compile Include="Classes\ElevatorShaft.cs" />
     <Compile Include="Classes\Hotel.cs" />
+    <Compile Include="Classes\Reception.cs" />
     <Compile Include="Classes\Restaurant.cs" />
     <Compile Include="Classes\Floor.cs" />
+    <Compile Include="Classes\Staircase.cs" />
     <Compile Include="Interfaces\IArea.cs" />
     <Compile Include="Classes\Room.cs" />
     <Compile Include="ImportLayout.cs" />
