--- a/HotelSimulatie/HotelSimulatie/HotelSimulatie.csproj
+++ b/HotelSimulatie/HotelSimulatie/HotelSimulatie.csproj
@@ -51,18 +51,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\Cinema.cs" />
+    <Compile Include="Classes\Elevator.cs" />
     <Compile Include="Classes\ElevatorShaft.cs" />
     <Compile Include="Classes\Fitness.cs" />
-<<<<<<< HEAD
     <Compile Include="Classes\Hallway.cs" />
-=======
->>>>>>> 8d93113528cd78a1edecde47f2fe80ea178b3cd1
     <Compile Include="Classes\Hotel.cs" />
     <Compile Include="Classes\Reception.cs" />
     <Compile Include="Classes\Restaurant.cs" />
     <Compile Include="Classes\Floor.cs" />
     <Compile Include="Classes\Staircase.cs" />
     <Compile Include="Draw.cs" />
+    <Compile Include="Factories\RoomFactory.cs" />
     <Compile Include="Interfaces\IArea.cs" />
     <Compile Include="Classes\Room.cs" />
     <Compile Include="ImportLayout.cs" />
@@ -153,15 +152,12 @@
     <None Include="Resources\Cinema.png" />
   </ItemGroup>
   <ItemGroup>
-<<<<<<< HEAD
     <None Include="Resources\Staircase.png" />
     <None Include="Resources\RoomDoor.png" />
     <Content Include="Resources\Staircase.png" />
-=======
     <None Include="Resources\RoomDoor.png" />
     <None Include="Resources\Staircase.bmp" />
     <None Include="Resources\Staircase.png" />
->>>>>>> 8d93113528cd78a1edecde47f2fe80ea178b3cd1
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
