--- a/HotelSimulatie/HotelSimulatie/HotelSimulatie.csproj
+++ b/HotelSimulatie/HotelSimulatie/HotelSimulatie.csproj
@@ -65,7 +65,7 @@
     <Compile Include="Classes\Areas\Staircase.cs" />
     <Compile Include="Classes\Debug\DummyEvent.cs" />
     <Compile Include="Classes\Human\Customer.cs" />
-    <Compile Include="Draw.cs" />
+    <Compile Include="Classes\Output\DummyEvent.cs" />
     <Compile Include="Factories\RoomFactory.cs" />
     <Compile Include="Interfaces\Human.cs" />
     <Compile Include="Interfaces\IArea.cs" />
