--- a/HotelSimulatie/HotelSimulatie/HotelSimulatie.csproj
+++ b/HotelSimulatie/HotelSimulatie/HotelSimulatie.csproj
@@ -34,9 +34,6 @@
     <Reference Include="HotelEvents">
       <HintPath>..\..\Source Files\HotelEvents.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.QualityTools.Testing.Fakes, Version=12.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-    </Reference>
     <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -57,6 +54,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\Areas\Cinema.cs" />
+    <Compile Include="EditScreen.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditScreen.Designer.cs">
+      <DependentUpon>EditScreen.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Classes\System\GlobalStatistics.cs" />
+    <Compile Include="Interfaces\ISettingsScreen.cs" />
     <Compile Include="Interfaces\ISimulationForm.cs" />
     <Compile Include="Pathfinding\Route.cs" />
     <Compile Include="ReceptionScreen.cs">
@@ -72,7 +77,7 @@
     <Compile Include="Classes\Entities\Hotel.cs" />
     <Compile Include="Classes\Areas\Reception.cs" />
     <Compile Include="Classes\Areas\Restaurant.cs" />
-    <Compile Include="Classes\Areas\Floor.cs" />
+    <Compile Include="Classes\Entities\Floor.cs" />
     <Compile Include="Classes\Areas\Staircase.cs" />
     <Compile Include="Classes\Human\Cleaner.cs" />
     <Compile Include="Classes\Human\Customer.cs" />
@@ -105,6 +110,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Sprites.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="EditScreen.resx">
+      <DependentUpon>EditScreen.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ReceptionScreen.resx">
       <DependentUpon>ReceptionScreen.cs</DependentUpon>
     </EmbeddedResource>
