Starting adding EventListeners

--- a/HotelSimulatie/HotelSimulatie/HotelSimulatie.csproj
+++ b/HotelSimulatie/HotelSimulatie/HotelSimulatie.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\Areas\Cinema.cs" />
+    <Compile Include="Classes\System\GlobalEventManager.cs" />
     <Compile Include="EditScreen.cs">
       <SubType>Form</SubType>
     </Compile>
